# cibot_test

./: .gitignore  CHANGELOG.json  CHANGELOG.md  hello.py  pyproject.toml  report.json
.github/workflows/: cibot.yml
baibaz/: pyproject.toml
baibaz/src/baibaz/: __init__.py
baibaz/tests/: test_baibaz.py
src/cool_package/: __init__.py
tests/: test_cool_function.py
