[project]
name = "cibot-test"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "cibot",
    "pytest-cov>=6.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cool_package"]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "class .*\\(.*\\bProtocol\\b.*\\):", "@(?:typing\\.)?overload", "if TYPE_CHECKING:", "raise NotImplementedError", "def __repr__",]
omit = [ "tests/*",]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2

[tool.coverage.run]
omit = [ "tests/*",]
relative_files = true


[tool.uv.sources]
cibot = { git = "https://github.com/nrbnlulu/cibot.git", branch = "codecov" }
