[project]
name = "baibaz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nir", email = "nrbnlulu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baibaz"]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
